target/classes/META-INF/fabric8/openshift/hello-deploymentconfig.yml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 67eb173f01397e4717f2eee96c743b67d8c3d801
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: main
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=hello&var-version=0.0.1-SNAPSHOT
    fabric8.io/scm-tag: HEAD
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/hello
  labels:
    app: hello
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.hello
  name: hello
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: hello
    provider: fabric8
    group: com.hello
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 67eb173f01397e4717f2eee96c743b67d8c3d801
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=hello&var-version=0.0.1-SNAPSHOT
        fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/hello
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: main
        fabric8.io/scm-tag: HEAD
      labels:
        app: hello
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: com.hello
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: hello/hello:snapshot-231124-061208-0366
        imagePullPolicy: IfNotPresent
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
