target/classes/META-INF/fabric8/openshift/hello-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: b2ac6f584463eb084846563360d146cfa469d84a
    prometheus.io/port: "9779"
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/hello
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: main
    prometheus.io/scrape: "true"
    fabric8.io/scm-tag: HEAD
  labels:
    expose: "true"
    app: hello
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.hello
  name: hello
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello
    provider: fabric8
    group: com.hello
