target/classes/META-INF/fabric8/openshift/hello-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: hello
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.hello
  name: hello
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello
